--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,4 +24,4 @@ jobs:
     - run: node --check toICN.js
     - run: node --check toICN-debug.js
     - run: sh gen.sh
-    - run: git --exit-code diff
+    - run: git diff --exit-code
