--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,3 +25,4 @@ jobs:
     - run: node --check toICN-debug.js
     - run: sh gen.sh
     - run: git diff --exit-code
+    - run: test 0 -eq $(cat toICN.bookmarklet|wc -l)
