--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,7 +22,7 @@ jobs:
         node-version: 14.x
     - run: node test.js
     - run: node --check toICN.js
-    - run: node --check toICN-debug.js
+    - run: node --check toICN.user.js
     - run: sh gen.sh
     - run: git diff --exit-code
     - run: test 0 -eq $(cat toICN.bookmarklet|wc -l)
